tpParse.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
prog' -> . prog [ # ]
## Transitions:
-- On OBJECT shift to state 1
-- On CLASS shift to state 124
-- On prog shift to state 141
-- On object_ shift to state 142
-- On list(classOrObject) shift to state 143
-- On class_ shift to state 146
-- On classOrObject shift to state 147
## Reductions:
-- On LCBRACE
--   reduce production list(classOrObject) ->

State 1:
## Known stack suffix:
## OBJECT
## LR(1) items:
object_ -> OBJECT . ID option(bloc) IS LCBRACE classIn RCBRACE [ OBJECT LCBRACE CLASS ]
## Transitions:
-- On ID shift to state 2
## Reductions:

State 2:
## Known stack suffix:
## OBJECT ID
## LR(1) items:
object_ -> OBJECT ID . option(bloc) IS LCBRACE classIn RCBRACE [ OBJECT LCBRACE CLASS ]
## Transitions:
-- On LCBRACE shift to state 3
-- On option(bloc) shift to state 83
-- On bloc shift to state 123
## Reductions:
-- On IS
--   reduce production option(bloc) ->

State 3:
## Known stack suffix:
## LCBRACE
## LR(1) items:
bloc -> LCBRACE . list(instr) RCBRACE [ STRING RETURN RCBRACE PLUS NOT NEW MINUS LPAREN LCBRACE IS IF ID EOF ELSE DEF CSTE ]
bloc -> LCBRACE . blocWDecl RCBRACE [ STRING RETURN RCBRACE PLUS NOT NEW MINUS LPAREN LCBRACE IS IF ID EOF ELSE DEF CSTE ]
## Transitions:
-- On STRING shift to state 4
-- On RETURN shift to state 5
-- On PLUS shift to state 7
-- On NOT shift to state 8
-- On NEW shift to state 9
-- On MINUS shift to state 12
-- On LPAREN shift to state 13
-- On LCBRACE shift to state 3
-- On IF shift to state 51
-- On ID shift to state 64
-- On CSTE shift to state 15
-- On valueFst shift to state 16
-- On value shift to state 54
-- On separated_nonempty_list(COMMA,ID) shift to state 68
-- On list(instr) shift to state 72
-- On list(decl) shift to state 74
-- On instr shift to state 77
-- On expr shift to state 61
-- On decl shift to state 79
-- On blocWDecl shift to state 81
-- On bloc shift to state 63
## Reductions:
-- On IS
--   reduce production list(decl) ->
-- On RCBRACE
--   reduce production list(instr) ->

State 4:
## Known stack suffix:
## STRING
## LR(1) items:
valueFst -> STRING . [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA ASSIGN AND ]
## Transitions:
## Reductions:
-- On TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA ASSIGN AND
--   reduce production valueFst -> STRING

State 5:
## Known stack suffix:
## RETURN
## LR(1) items:
instr -> RETURN . SEMICOLON [ STRING RETURN RCBRACE PLUS NOT NEW MINUS LPAREN LCBRACE IF ID ELSE CSTE ]
## Transitions:
-- On SEMICOLON shift to state 6
## Reductions:

State 6:
## Known stack suffix:
## RETURN SEMICOLON
## LR(1) items:
instr -> RETURN SEMICOLON . [ STRING RETURN RCBRACE PLUS NOT NEW MINUS LPAREN LCBRACE IF ID ELSE CSTE ]
## Transitions:
## Reductions:
-- On STRING RETURN RCBRACE PLUS NOT NEW MINUS LPAREN LCBRACE IF ID ELSE CSTE
--   reduce production instr -> RETURN SEMICOLON

State 7:
## Known stack suffix:
## PLUS
## LR(1) items:
expr -> PLUS . expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
## Transitions:
-- On STRING shift to state 4
-- On PLUS shift to state 7
-- On NOT shift to state 8
-- On NEW shift to state 9
-- On MINUS shift to state 12
-- On LPAREN shift to state 13
-- On ID shift to state 14
-- On CSTE shift to state 15
-- On valueFst shift to state 16
-- On value shift to state 17
-- On expr shift to state 50
## Reductions:

State 8:
## Known stack suffix:
## NOT
## LR(1) items:
expr -> NOT . expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
## Transitions:
-- On STRING shift to state 4
-- On PLUS shift to state 7
-- On NOT shift to state 8
-- On NEW shift to state 9
-- On MINUS shift to state 12
-- On LPAREN shift to state 13
-- On ID shift to state 14
-- On CSTE shift to state 15
-- On valueFst shift to state 16
-- On value shift to state 17
-- On expr shift to state 49
## Reductions:

State 9:
## Known stack suffix:
## NEW
## LR(1) items:
expr -> NEW . ID LPAREN loption(separated_nonempty_list(COMMA,expr)) RPAREN [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
## Transitions:
-- On ID shift to state 10
## Reductions:

State 10:
## Known stack suffix:
## NEW ID
## LR(1) items:
expr -> NEW ID . LPAREN loption(separated_nonempty_list(COMMA,expr)) RPAREN [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
## Transitions:
-- On LPAREN shift to state 11
## Reductions:

State 11:
## Known stack suffix:
## NEW ID LPAREN
## LR(1) items:
expr -> NEW ID LPAREN . loption(separated_nonempty_list(COMMA,expr)) RPAREN [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
## Transitions:
-- On STRING shift to state 4
-- On PLUS shift to state 7
-- On NOT shift to state 8
-- On NEW shift to state 9
-- On MINUS shift to state 12
-- On LPAREN shift to state 13
-- On ID shift to state 14
-- On CSTE shift to state 15
-- On valueFst shift to state 16
-- On value shift to state 17
-- On separated_nonempty_list(COMMA,expr) shift to state 24
-- On loption(separated_nonempty_list(COMMA,expr)) shift to state 47
-- On expr shift to state 27
## Reductions:
-- On RPAREN
--   reduce production loption(separated_nonempty_list(COMMA,expr)) ->

State 12:
## Known stack suffix:
## MINUS
## LR(1) items:
expr -> MINUS . expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
## Transitions:
-- On STRING shift to state 4
-- On PLUS shift to state 7
-- On NOT shift to state 8
-- On NEW shift to state 9
-- On MINUS shift to state 12
-- On LPAREN shift to state 13
-- On ID shift to state 14
-- On CSTE shift to state 15
-- On valueFst shift to state 16
-- On value shift to state 17
-- On expr shift to state 46
## Reductions:

State 13:
## Known stack suffix:
## LPAREN
## LR(1) items:
expr -> LPAREN . expr RPAREN [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
## Transitions:
-- On STRING shift to state 4
-- On PLUS shift to state 7
-- On NOT shift to state 8
-- On NEW shift to state 9
-- On MINUS shift to state 12
-- On LPAREN shift to state 13
-- On ID shift to state 14
-- On CSTE shift to state 15
-- On valueFst shift to state 16
-- On value shift to state 17
-- On expr shift to state 18
## Reductions:

State 14:
## Known stack suffix:
## ID
## LR(1) items:
valueFst -> ID . [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA ASSIGN AND ]
## Transitions:
## Reductions:
-- On TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA ASSIGN AND
--   reduce production valueFst -> ID

State 15:
## Known stack suffix:
## CSTE
## LR(1) items:
valueFst -> CSTE . [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA ASSIGN AND ]
## Transitions:
## Reductions:
-- On TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA ASSIGN AND
--   reduce production valueFst -> CSTE

State 16:
## Known stack suffix:
## valueFst
## LR(1) items:
value -> valueFst . [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA ASSIGN AND ]
## Transitions:
## Reductions:
-- On TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA ASSIGN AND
--   reduce production value -> valueFst

State 17:
## Known stack suffix:
## value
## LR(1) items:
expr -> value . [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
## Transitions:
## Reductions:
-- On TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND
--   reduce production expr -> value

State 18:
## Known stack suffix:
## LPAREN expr
## LR(1) items:
expr -> expr . PLUS expr [ TIMES RPAREN RELOP PLUS OR MINUS DOT DIV CONCAT AND ]
expr -> expr . MINUS expr [ TIMES RPAREN RELOP PLUS OR MINUS DOT DIV CONCAT AND ]
expr -> expr . TIMES expr [ TIMES RPAREN RELOP PLUS OR MINUS DOT DIV CONCAT AND ]
expr -> expr . DIV expr [ TIMES RPAREN RELOP PLUS OR MINUS DOT DIV CONCAT AND ]
expr -> expr . AND expr [ TIMES RPAREN RELOP PLUS OR MINUS DOT DIV CONCAT AND ]
expr -> expr . OR expr [ TIMES RPAREN RELOP PLUS OR MINUS DOT DIV CONCAT AND ]
expr -> expr . RELOP expr [ TIMES RPAREN RELOP PLUS OR MINUS DOT DIV CONCAT AND ]
expr -> LPAREN expr . RPAREN [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . CONCAT expr [ TIMES RPAREN RELOP PLUS OR MINUS DOT DIV CONCAT AND ]
value -> expr . DOT valueNxt [ TIMES RPAREN RELOP PLUS OR MINUS DOT DIV CONCAT AND ]
## Transitions:
-- On TIMES shift to state 19
-- On RPAREN shift to state 45
-- On RELOP shift to state 28
-- On PLUS shift to state 30
-- On OR shift to state 38
-- On MINUS shift to state 34
-- On DOT shift to state 21
-- On DIV shift to state 32
-- On CONCAT shift to state 36
-- On AND shift to state 40
## Reductions:

State 19:
## Known stack suffix:
## expr TIMES
## LR(1) items:
expr -> expr TIMES . expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
## Transitions:
-- On STRING shift to state 4
-- On PLUS shift to state 7
-- On NOT shift to state 8
-- On NEW shift to state 9
-- On MINUS shift to state 12
-- On LPAREN shift to state 13
-- On ID shift to state 14
-- On CSTE shift to state 15
-- On valueFst shift to state 16
-- On value shift to state 17
-- On expr shift to state 20
## Reductions:

State 20:
## Known stack suffix:
## expr TIMES expr
## LR(1) items:
expr -> expr . PLUS expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . MINUS expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . TIMES expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr TIMES expr . [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . DIV expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . AND expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . OR expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . RELOP expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . CONCAT expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
value -> expr . DOT valueNxt [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
## Transitions:
-- On DOT shift to state 21
## Reductions:
-- On TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DIV DEF CONCAT COMMA AND
--   reduce production expr -> expr TIMES expr

State 21:
## Known stack suffix:
## expr DOT
## LR(1) items:
value -> expr DOT . valueNxt [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA ASSIGN AND ]
## Transitions:
-- On ID shift to state 22
-- On valueNxt shift to state 44
## Reductions:

State 22:
## Known stack suffix:
## ID
## LR(1) items:
valueNxt -> ID . [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA ASSIGN AND ]
valueNxt -> ID . LPAREN loption(separated_nonempty_list(COMMA,expr)) RPAREN [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA ASSIGN AND ]
## Transitions:
-- On LPAREN shift to state 23
## Reductions:
-- On TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA ASSIGN AND
--   reduce production valueNxt -> ID

State 23:
## Known stack suffix:
## ID LPAREN
## LR(1) items:
valueNxt -> ID LPAREN . loption(separated_nonempty_list(COMMA,expr)) RPAREN [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA ASSIGN AND ]
## Transitions:
-- On STRING shift to state 4
-- On PLUS shift to state 7
-- On NOT shift to state 8
-- On NEW shift to state 9
-- On MINUS shift to state 12
-- On LPAREN shift to state 13
-- On ID shift to state 14
-- On CSTE shift to state 15
-- On valueFst shift to state 16
-- On value shift to state 17
-- On separated_nonempty_list(COMMA,expr) shift to state 24
-- On loption(separated_nonempty_list(COMMA,expr)) shift to state 25
-- On expr shift to state 27
## Reductions:
-- On RPAREN
--   reduce production loption(separated_nonempty_list(COMMA,expr)) ->

State 24:
## Known stack suffix:
## separated_nonempty_list(COMMA,expr)
## LR(1) items:
loption(separated_nonempty_list(COMMA,expr)) -> separated_nonempty_list(COMMA,expr) . [ RPAREN ]
## Transitions:
## Reductions:
-- On RPAREN
--   reduce production loption(separated_nonempty_list(COMMA,expr)) -> separated_nonempty_list(COMMA,expr)

State 25:
## Known stack suffix:
## ID LPAREN loption(separated_nonempty_list(COMMA,expr))
## LR(1) items:
valueNxt -> ID LPAREN loption(separated_nonempty_list(COMMA,expr)) . RPAREN [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA ASSIGN AND ]
## Transitions:
-- On RPAREN shift to state 26
## Reductions:

State 26:
## Known stack suffix:
## ID LPAREN loption(separated_nonempty_list(COMMA,expr)) RPAREN
## LR(1) items:
valueNxt -> ID LPAREN loption(separated_nonempty_list(COMMA,expr)) RPAREN . [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA ASSIGN AND ]
## Transitions:
## Reductions:
-- On TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA ASSIGN AND
--   reduce production valueNxt -> ID LPAREN loption(separated_nonempty_list(COMMA,expr)) RPAREN

State 27:
## Known stack suffix:
## expr
## LR(1) items:
expr -> expr . PLUS expr [ TIMES RPAREN RELOP PLUS OR MINUS DOT DIV CONCAT COMMA AND ]
expr -> expr . MINUS expr [ TIMES RPAREN RELOP PLUS OR MINUS DOT DIV CONCAT COMMA AND ]
expr -> expr . TIMES expr [ TIMES RPAREN RELOP PLUS OR MINUS DOT DIV CONCAT COMMA AND ]
expr -> expr . DIV expr [ TIMES RPAREN RELOP PLUS OR MINUS DOT DIV CONCAT COMMA AND ]
expr -> expr . AND expr [ TIMES RPAREN RELOP PLUS OR MINUS DOT DIV CONCAT COMMA AND ]
expr -> expr . OR expr [ TIMES RPAREN RELOP PLUS OR MINUS DOT DIV CONCAT COMMA AND ]
expr -> expr . RELOP expr [ TIMES RPAREN RELOP PLUS OR MINUS DOT DIV CONCAT COMMA AND ]
expr -> expr . CONCAT expr [ TIMES RPAREN RELOP PLUS OR MINUS DOT DIV CONCAT COMMA AND ]
separated_nonempty_list(COMMA,expr) -> expr . [ RPAREN ]
separated_nonempty_list(COMMA,expr) -> expr . COMMA separated_nonempty_list(COMMA,expr) [ RPAREN ]
value -> expr . DOT valueNxt [ TIMES RPAREN RELOP PLUS OR MINUS DOT DIV CONCAT COMMA AND ]
## Transitions:
-- On TIMES shift to state 19
-- On RELOP shift to state 28
-- On PLUS shift to state 30
-- On OR shift to state 38
-- On MINUS shift to state 34
-- On DOT shift to state 21
-- On DIV shift to state 32
-- On CONCAT shift to state 36
-- On COMMA shift to state 42
-- On AND shift to state 40
## Reductions:
-- On RPAREN
--   reduce production separated_nonempty_list(COMMA,expr) -> expr

State 28:
## Known stack suffix:
## expr RELOP
## LR(1) items:
expr -> expr RELOP . expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
## Transitions:
-- On STRING shift to state 4
-- On PLUS shift to state 7
-- On NOT shift to state 8
-- On NEW shift to state 9
-- On MINUS shift to state 12
-- On LPAREN shift to state 13
-- On ID shift to state 14
-- On CSTE shift to state 15
-- On valueFst shift to state 16
-- On value shift to state 17
-- On expr shift to state 29
## Reductions:

State 29:
## Known stack suffix:
## expr RELOP expr
## LR(1) items:
expr -> expr . PLUS expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . MINUS expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . TIMES expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . DIV expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . AND expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . OR expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . RELOP expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr RELOP expr . [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . CONCAT expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
value -> expr . DOT valueNxt [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
## Transitions:
-- On TIMES shift to state 19
-- On PLUS shift to state 30
-- On MINUS shift to state 34
-- On DOT shift to state 21
-- On DIV shift to state 32
-- On CONCAT shift to state 36
## Reductions:
-- On THEN SEMICOLON RPAREN RELOP RCBRACE OR DEF COMMA AND
--   reduce production expr -> expr RELOP expr

State 30:
## Known stack suffix:
## expr PLUS
## LR(1) items:
expr -> expr PLUS . expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
## Transitions:
-- On STRING shift to state 4
-- On PLUS shift to state 7
-- On NOT shift to state 8
-- On NEW shift to state 9
-- On MINUS shift to state 12
-- On LPAREN shift to state 13
-- On ID shift to state 14
-- On CSTE shift to state 15
-- On valueFst shift to state 16
-- On value shift to state 17
-- On expr shift to state 31
## Reductions:

State 31:
## Known stack suffix:
## expr PLUS expr
## LR(1) items:
expr -> expr . PLUS expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr PLUS expr . [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . MINUS expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . TIMES expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . DIV expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . AND expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . OR expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . RELOP expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . CONCAT expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
value -> expr . DOT valueNxt [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
## Transitions:
-- On TIMES shift to state 19
-- On DOT shift to state 21
-- On DIV shift to state 32
## Reductions:
-- On THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DEF CONCAT COMMA AND
--   reduce production expr -> expr PLUS expr

State 32:
## Known stack suffix:
## expr DIV
## LR(1) items:
expr -> expr DIV . expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
## Transitions:
-- On STRING shift to state 4
-- On PLUS shift to state 7
-- On NOT shift to state 8
-- On NEW shift to state 9
-- On MINUS shift to state 12
-- On LPAREN shift to state 13
-- On ID shift to state 14
-- On CSTE shift to state 15
-- On valueFst shift to state 16
-- On value shift to state 17
-- On expr shift to state 33
## Reductions:

State 33:
## Known stack suffix:
## expr DIV expr
## LR(1) items:
expr -> expr . PLUS expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . MINUS expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . TIMES expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . DIV expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr DIV expr . [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . AND expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . OR expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . RELOP expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . CONCAT expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
value -> expr . DOT valueNxt [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
## Transitions:
-- On DOT shift to state 21
## Reductions:
-- On TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DIV DEF CONCAT COMMA AND
--   reduce production expr -> expr DIV expr

State 34:
## Known stack suffix:
## expr MINUS
## LR(1) items:
expr -> expr MINUS . expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
## Transitions:
-- On STRING shift to state 4
-- On PLUS shift to state 7
-- On NOT shift to state 8
-- On NEW shift to state 9
-- On MINUS shift to state 12
-- On LPAREN shift to state 13
-- On ID shift to state 14
-- On CSTE shift to state 15
-- On valueFst shift to state 16
-- On value shift to state 17
-- On expr shift to state 35
## Reductions:

State 35:
## Known stack suffix:
## expr MINUS expr
## LR(1) items:
expr -> expr . PLUS expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . MINUS expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr MINUS expr . [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . TIMES expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . DIV expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . AND expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . OR expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . RELOP expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . CONCAT expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
value -> expr . DOT valueNxt [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
## Transitions:
-- On TIMES shift to state 19
-- On DOT shift to state 21
-- On DIV shift to state 32
## Reductions:
-- On THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DEF CONCAT COMMA AND
--   reduce production expr -> expr MINUS expr

State 36:
## Known stack suffix:
## expr CONCAT
## LR(1) items:
expr -> expr CONCAT . expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
## Transitions:
-- On STRING shift to state 4
-- On PLUS shift to state 7
-- On NOT shift to state 8
-- On NEW shift to state 9
-- On MINUS shift to state 12
-- On LPAREN shift to state 13
-- On ID shift to state 14
-- On CSTE shift to state 15
-- On valueFst shift to state 16
-- On value shift to state 17
-- On expr shift to state 37
## Reductions:

State 37:
## Known stack suffix:
## expr CONCAT expr
## LR(1) items:
expr -> expr . PLUS expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . MINUS expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . TIMES expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . DIV expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . AND expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . OR expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . RELOP expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr . CONCAT expr [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
expr -> expr CONCAT expr . [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
value -> expr . DOT valueNxt [ TIMES THEN SEMICOLON RPAREN RELOP RCBRACE PLUS OR MINUS DOT DIV DEF CONCAT COMMA AND ]
## Transitions:
-- On TIMES shift to state 19
-- On PLUS shift to state 30
-- On MINUS shift to state 34
-- On DOT shift to state 21
-- On DIV shift to state 32
## Reductions:
-- On THEN SEMICOLON RPAREN RELOP RCBRACE OR DEF CONCAT COMMA AND
--   reduce production expr -> expr CONCAT expr
